<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg"
    tools:context=".Home_Page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:scaleType="fitEnd"
            android:src="@drawable/trophy"
            android:onClick="show_scroeboard" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        android:layout_gravity="center"
        android:gravity="center">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="100dp"/>



        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/playButton"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:fontFamily="@font/promptfontfile"
            android:textColor="@color/white"
            android:background="@drawable/rounded_rectangle_play"
            android:onClick="showAlertDialogButtonClicked"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/helpButton"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:fontFamily="@font/promptfontfile"
            android:textColor="@color/white"
            android:background="@drawable/rounded_rectangle_help"
            android:onClick="gotohelp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/quitButton"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:fontFamily="@font/promptfontfile"
            android:textColor="@color/white"
            android:background="@drawable/rounded_rectangle_quit"
            android:onClick="quitApp"/>

    </LinearLayout>
</LinearLayout>