<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/modal_shape"
    android:elevation="2dp">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/darkblue"
        android:textStyle="bold"
        android:fontFamily="@font/promptfontfile"
        android:textSize="30sp"
        android:layout_marginBottom="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:layout_marginBottom="20dp"
        android:elevation="2dp">
        <EditText
            android:id="@+id/nickname"
            android:background="@drawable/rounded_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/nickname"
            android:textColorHint="@color/darkgray"
            android:textColor="@color/black"
            android:inputType="textCapSentences"
            android:drawableStart="@drawable/person"
            android:drawablePadding="5dp"
            android:padding="15dp"
            android:textSize="18sp"
            android:focusable="true" />

        <ImageView
            android:id="@+id/clearNickname"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/clear"
            android:visibility="gone"
            android:onClick="clearNickname"/>
    </LinearLayout>


    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_item"
        android:layout_marginBottom="30dp"
        android:elevation="2dp"
        android:spinnerMode="dialog" />



    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/startButton"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        android:fontFamily="@font/promptfontfile"
        android:textColor="@color/white"
        android:background="@drawable/rounded_rectangle_start"
        android:layout_gravity="center"
        android:onClick="gotoplay"/>

</LinearLayout>