<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    tools:context=".Help_Page">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:scaleType="fitStart"
        android:src="@drawable/arrow_back"
        android:layout_marginBottom="10dp"
        android:onClick="go_backHP"
        />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/howToPlayTitle"
        android:textColor="@color/darkblue"
        android:fontFamily="@font/promptfontfile"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginBottom="15dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/promptfontfile"
                android:text="@string/howtoplay"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/promptfontfile"
                android:text="@string/goodluck"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/cheering"
                app:lottie_loop="true"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>