<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:onClick="showInfo"
    android:layout_marginBottom="10dp"
    android:id="@+id/layout_id">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="@drawable/rounded_edittext"
        android:elevation="2dp">

        <TextView
            android:id="@+id/rank_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/initAttempts"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/promptfontfile"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/orange" />

        <View
            android:layout_height="50dp"
            android:layout_width="2dip"
            android:layout_gravity="center_vertical"
            android:background="@color/darkgray"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/nickname_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textSize="15sp"
                android:textStyle="bold"
                android:ellipsize="marquee"
                android:fontFamily="@font/promptfontfile"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/orange"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:ellipsize="marquee"
                android:textStyle="bold"
                android:fontFamily="@font/promptfontfile"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12sp"
                android:textColor="@color/darkgray" />

        </LinearLayout>

        <View
            android:layout_height="50dp"
            android:layout_width="2dip"
            android:layout_gravity="center_vertical"
            android:background="@color/darkgray"/>

        <TextView
            android:id="@+id/score_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/initAttempts"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/promptfontfile"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/orange" />

    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:background="@drawable/rounded_rectangle_additional_info"
       android:padding="10dp"
       android:visibility="gone"
       android:layout_marginTop="-8dp"
       android:id="@+id/additional_info">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="5dp"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/attempts"
               android:textSize="12sp"
               android:gravity="center"
               android:fontFamily="@font/promptfontfile"
               android:textColor="@color/darkgray"
               android:layout_gravity="center"
               android:scaleType="fitStart" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/timeSpent"
               android:gravity="center"
               android:textSize="12sp"
               android:fontFamily="@font/promptfontfile"
               android:textColor="@color/darkgray"
               android:layout_gravity="center"
               android:scaleType="fitEnd" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <TextView
               android:id="@+id/attempts_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/initAttempts"
               android:textSize="20sp"
               android:gravity="center"
               android:fontFamily="@font/promptfontfile"
               android:textColor="@color/orange"
               android:layout_gravity="center"
               android:scaleType="fitStart" />

           <TextView
               android:id="@+id/timeneeded"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/initAttempts"
               android:textSize="20sp"
               android:gravity="center"
               android:fontFamily="@font/promptfontfile"
               android:textColor="@color/orange"
               android:layout_gravity="center"
               android:scaleType="fitEnd" />

       </LinearLayout>
   </LinearLayout>
</LinearLayout>


